# bncc_api

./: .env.example  .firebaserc  .gcloudignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCT.md  README.md  SECURITY.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  firebase.json  pyproject.toml  report.md  requirements.txt  run.py
.claude/agents/: bncc-auditor.md
.claude/skills/copywriting/: SKILL.md
.claude/skills/copywriting/references/: ai-writing-signs.md  natural-transitions.md
.claude/skills/impeccable/: SKILL.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  divergencia_bncc.yml  feature_request.yml
.github/skills/impeccable/: SKILL.md
.github/workflows/: ci.yml  codeql.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/extensions/.cache/: catalog-metadata.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: __init__.py  main.py
app/api/: openapi.py  versions.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  auth.py  busca.py  competencias.py  habilidades.py  keys.py  sistema.py  taxonomia.py  usage.py
app/core/: config.py  deps.py  errors.py  ratelimit.py  security.py
app/db/: base.py  tables.py
app/models/: __init__.py  bncc.py  cost.py  platform.py  search.py
app/services/: account_service.py  admin_service.py  ai_service.py  apikey_service.py  bncc_service.py  cost_service.py  email_service.py  oauth_service.py  onboarding_service.py  usage_service.py  vector_store.py
app/utils/: __init__.py  helpers.py
app/web/: admin.py  charts.py  docs.py  landing.py  openapi_archive.py  portal.py  router.py  staticfiles.py
app/web/static/: styles.css
app/web/templates/: 404.html  base.html  docs.html  landing.html  reference.html
app/web/templates/admin/: base.html  costs.html  dashboard.html  login.html  user_detail.html  users.html
app/web/templates/portal/: _oauth_buttons.html  change_password.html  dashboard.html  login.html  (+4 more)
audit/: PROGRESSO.md  ledger.json
audit/relatorios/: 2026-07-11-lote-0001.md
data/: bncc_v1.json
deploy/: README.md  cloudrun.ps1
deploy/admin/: .gitignore  README.md  deploy-admin.ps1  local-admin.ps1
docs/: auditoria-externa.md  relatorio-teste-producao-2026-07-05.md  relatorio-teste-producao.html  seguranca-endurecimento.md  versioning.md
docs/openapi/v1/: 1.3.0.json  index.json
migrations/: env.py
migrations/versions/: 0001_initial_platform.py  0002_onboarding_profiles.py  0003_oauth_identities.py  0004_usage_error_count.py  0005_password_reset_tokens.py  0006_cost_records.py
public/: .gitkeep
scripts/: __init__.py  audit_external.py  audit_extraction.py  bncc_description_fixes.json  extract_bncc_computacao.py  extract_bncc_data.py  freeze_openapi.py  generate_embeddings.py  generate_og_image.py  ingest_costs.py  reconcile_bncc_descriptions.py  seed_cost_history.py  validate_bncc_coverage.py
scripts/audit/: __init__.py  engine.py
scripts/audit/sources/: __init__.py  arbiter_pdf.py  bncc_mcp_csv.py  mec_portal.py
sdks/: openapi.json
specs/001-public-api-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-public-api-platform/checklists/: requirements.md
specs/001-public-api-platform/contracts/: README.md  api-keys-usage.md  auth-portal.md  bncc-data.md  semantic-search.md
specs/002-bncc-computacao/: spec.md
tests/: conftest.py  test_api.py
tests/contract/: openapi_snapshot.json  test_admin.py  test_audit_external.py  test_audit_extraction.py  test_auth.py  test_busca_semantica.py  test_competencias.py  test_computacao.py  test_habilidades.py  test_keys.py  test_openapi_contract.py  test_openapi_release_snapshots.py  test_password.py  test_relacoes_snapshot.py  test_taxonomia_sistema.py  test_usage.py
tests/integration/: test_access_flow.py  test_ai_degradation.py  test_bncc_coverage.py  test_bncc_fidelity.py  test_docs.py  test_host_header_security.py  test_landing.py  test_landing_costs.py  test_landing_transparency.py  test_oauth_flow.py  test_performance.py  test_portal_onboarding.py  test_portal_password.py  test_portal_ssr.py
tests/unit/: test_bncc_parsing.py  test_charts.py  test_computacao_parsing.py  test_config_security.py  test_cost_service.py  test_ingest_costs.py  test_oauth_service.py  test_onboarding_service.py  test_rate_limit.py  test_seed_cost_history.py  test_services_coverage.py  test_usage_public.py
